# Missile-Battery-Command

./: .gitignore  CMakeLists.txt  MACOS_XCODE_SETUP.md  README.md  setup_cocos2dx.sh
cocos-creator-project/: package.json  tsconfig.json
cocos-creator-project/assets/scripts/components/: ConsoleFrame.ts  DualConsoleScene.ts  GameHUD.ts  IntegratedConsoleScene.ts  OverheadHUD.ts  RadarDisplay.ts  RadarScene.ts  SingleConsoleScene.ts
cocos-creator-project/assets/scripts/game/: Aircraft.ts  AircraftGenerator.ts  AirspaceManager.ts  BattalionHQ.ts  DataCard.ts  FireControlSystem.ts  GameConfig.ts  GameTypes.ts  IFFSystem.ts  MissileBattery.ts  ThreatBoard.ts  TrackManager.ts  index.ts
cocos-creator-project/settings/: project.json
docs/: BACKLOG.md  COCOS_CREATOR_SETUP.md  DEVELOPMENT_LOG.md  DEVELOPMENT_PLAN.md  DISPLACEMENT_FIELD_GUIDE.md  GAME_SCENARIO.md  PLAN.md  PLAYER_REFERENCE.md
include/: Aircraft.h  AircraftGenerator.h  AirspaceManager.h  AppDelegate.h  BattalionHQ.h  ConsoleFrame.h  DataCard.h  DrawerBook.h  FireControlSystem.h  GameConfig.h  GameHUD.h  GameTypes.h  IFFSystem.h  IntegratedConsoleScene.h  MissileBattery.h  RadarBlip.h  RadarDisplay.h  RadarScene.h  ThreatBoard.h  TrackManager.h  WelcomeScreen.h
macos/: Info.plist.in  XCODE_SETUP.md  generate_xcode.sh  patch_cocos2dx.sh
src/: Aircraft.cpp  AircraftGenerator.cpp  AirspaceManager.cpp  AppDelegate.cpp  BattalionHQ.cpp  ConsoleFrame.cpp  DataCard.cpp  DrawerBook.cpp  FireControlSystem.cpp  GameConfig.cpp  GameHUD.cpp  IFFSystem.cpp  IntegratedConsoleScene.cpp  MissileBattery.cpp  RadarBlip.cpp  RadarDisplay.cpp  RadarScene.cpp  ThreatBoard.cpp  TrackManager.cpp  WelcomeScreen.cpp  main.cpp
tests/: TestFramework.h  test_aircraft.cpp  test_aircraft_generator.cpp  test_airspace_manager.cpp  test_battalion_hq.cpp  test_cocos2dx_validation.cpp  test_data_card.cpp  test_fire_control.cpp  test_game_config.cpp  test_game_types.cpp  test_harness.cpp  test_iff_system.cpp  test_main.cpp  test_manifest.json  test_missile_battery.cpp  test_threat_board.cpp  test_track_manager.cpp
